.screen overflow-y is hidden, to prevent unnecessary scrollbar appearing. for some reason this only effects threads?

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   position: absolute;
   top: 0px; bottom: 0px;
   left: 0px; right: 0px;
+  overflow-y: hidden;
 }
 
 .column {
